--- a/index-1.css
+++ b/index-1.css
@@ -3,28 +3,77 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button {
+  cursor: pointer;
+}
+
+html,
 body {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
+  overscroll-behavior: none;
 }
+
+body {
+  position: relative;
+}
+
+p {
+  margin: 0 0 10.5px;
+  width: 540px;
+  font-size: 11px;
+}
+
+.info {
+  margin-bottom: 1.5rem;
+}
+.popover {
+  padding: 2rem 1.5rem;
+  position: fixed;
+  z-index: 10;
+  bottom: 80px;
+  right: 0;
+  color: white;
+  display: grid;
+  gap: 1rem;
+}
+.more {
+  display: none;
+}
+
+.bot {
+  border-radius: 20px;
+  background-color: #2770c9;
+  width: 7rem;
+  height: 2rem;
+  display: grid;
+  place-items: center;
+}
+
 #section1 {
   background-image: url(images/form-full-bg-generic.jpg);
   background-size: cover;
   background-position: 100%;
   font-size: 15px;
+  display: grid;
+  place-items: center;
 }
 
 .first {
-  display: flex;
-  flex-wrap: nowrap;
-  padding: 40px 100px;
+  display: grid;
+  gap: 3rem;
+  grid-template-columns: 1fr 6fr 6fr;
+  justify-content: center;
+  padding: 2em 0em;
+  width: 80%;
 }
 
 #start {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  margin-left: 20px;
 }
 
 #start h1 {
@@ -77,10 +126,10 @@ body {
 .pic {
   width: 100%;
 }
-
-
 #form1 {
   color: #181818;
+  display: grid;
+  gap: 0.2rem;
 }
 #form1 h3 {
   margin-bottom: 10px;
@@ -91,13 +140,14 @@ body {
   text-align: left;
 }
 #form1 p {
-  margin-bottom: 10px;
   font-size: 13px;
   text-align: left;
   line-height: normal;
 }
-form input {
-  margin-top: 30px;
+#form1 input,
+#form2 input,
+#form3 input[type="tel"],
+#form3 input[type="email"] {
   font-weight: 100;
   width: 450px;
   border-radius: 4px;
@@ -106,12 +156,31 @@ form input {
   padding: 5px 10px;
   border: 0.5px solid black;
 }
+
+select {
+  font-weight: 100;
+  width: 450px;
+  border-radius: 4px;
+  font-size: 15px;
+  line-height: 20px;
+  padding: 5px 10px;
+  border: 0.5px solid black;
+}
+
 #form2 {
   display: none;
+}
+.down {
+  margin-top: 10px;
 }
 #form3 {
   display: none;
 }
+.forms {
+  display: grid;
+  gap: 0.2rem;
+}
+
 form {
   padding: 30px;
   color: #444;
@@ -123,13 +192,13 @@ form {
   letter-spacing: normal;
   text-align: left;
   background-color: rgba(250, 244, 244, 0.8);
-  margin-bottom: 10px;
 }
-.next1 {
+
+.next {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  align-items: center;
+  margin-top: 30px;
 }
 .nextbtn {
   background-color: rgb(52, 101, 199);
@@ -145,24 +214,12 @@ form {
   background-color: white;
   color: blue;
   padding: 5px 10px;
-  width: 70px;
-  height: 35px;
+  width: 80px;
+  height: 42px;
   border: none;
   border-radius: 5px;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.step2 {
-  display: flex;
-  justify-content: space-between;
-}
-.in1 {
-  margin-bottom: 20px;
-  width: 100%;
-  height: 30px;
-  border-radius: 5px;
-  padding-left: 5px;
+  font-size: 15px;
+  margin-right: 10px;
 }
 #section2 {
   display: flex;
@@ -332,4 +389,57 @@ form {
   height: 15px;
   width: 30px;
   margin-right: 3px;
+}
+
+@media screen and (max-width: 631px) {
+  .first {
+    display: flex;
+    flex-direction: column;
+  }
+  .pic {
+    display: none;
+  }
+  .bot {
+    display: none;
+  }
+  .more {
+    border-radius: 50%;
+    background-color: #2770c9;
+    width: 3rem;
+    aspect-ratio: 1/1;
+    display: grid;
+    place-items: center;
+  }
+  #section2 {
+    flex-direction: column;
+    margin: 0;
+    padding: 15px;
+  }
+  #section2 img {
+    width: 100px;
+    height: 50px;
+    margin-left: 450px;
+  }
+  .container3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+    padding: 20px;
+  }
+  .links {
+    padding: 0;
+    max-width: 100%;
+  }
+  .links ul {
+    padding: 0;
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+  .links ul li {
+    text-wrap: nowrap;
+  }
+  #www {
+    margin-bottom: 30px;
+  }
 }
