--- a/index-1.css
+++ b/index-1.css
@@ -27,6 +27,7 @@ p {
   font-size: 11px;
 }
 
+
 .info {
   margin-bottom: 1.5rem;
 }
@@ -130,6 +131,8 @@ p {
   color: #181818;
   display: grid;
   gap: 0.2rem;
+  margin: auto;
+  width: auto;
 }
 #form1 h3 {
   margin-bottom: 10px;
