--- a/Project.css
+++ b/Project.css
@@ -1225,12 +1225,17 @@ a{
     margin-bottom: 16px;
     }
 
+    .header-two{
+        text-align: center !important;
+    }
+
     .contents-wrapper{
         display: block;
     }
 
     .CP{
         width: 300px;
+        text-align: center;
     }
 
     .image-container{
